IPC SimpleArgumentEncoder should static_assert(std::is_trivially_copyable<T>) https://bugs.webkit.org/show_bug.cgi?id=230743 <rdar://problem/83757335>

Reviewed by Kimmo Kinnunen.

Add static_assert(std::is_trivially_copyable<T>) to IPC SimpleArgumentEncoder to avoid misuses.

* Platform/IPC/ArgumentCoders.h:


Canonical link: https://commits.webkit.org/242570@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283618 268f45cc-cd09-0410-ab3c-d52691b4dbfc